turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: illegal start of simple expression
}
^